--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB=mongodb+srv://inder123:inder123@cluster0.7sjb1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-PORT=3000
-JWT_SECRET=001
+DB=
+PORT=
+JWT_SECRET=
 
 node_modules
